# AlphaBetaSolver

./: .env.development  .env.production  .gitignore  =0.11.0  Dockerfile.backend  Dockerfile.frontend  LOCAL_DEVELOPMENT_SETUP.md  architecture_gto_solver.md  compute_client.py  debug_websocket.py  diagnostic_client.sh  docker-compose.yml  install_client.sh  nginx.conf  nginx.test.conf  start_test_client.sh  ws_test.py
backend/: CMakeLists.txt
backend/python/: .env.local  requirements.txt  start_compute_agent.py  start_master.py  test_rabbitmq.py
backend/python/compute_node/: __init__.py  agent.py
backend/python/master_node/: main.py
backend/python/master_node/api/: auth.py  endpoints.py  endpoints_new.py  endpoints_old.py  websocket.py  websocket_events.py
backend/python/master_node/core/: config.py  monitoring.py  performance.py  security.py
backend/python/master_node/db/: __init__.py  database.py  init.sql  models.py
backend/python/master_node/services/: compute_node_manager.py  simulation_manager.py  task_queue.py
backend/python/tests/: conftest.py
backend/python/tests/integration/: test_api.py
backend/python/tests/unit/: test_models.py
backend/src/: CMakeLists.txt  main.cpp
backend/src/poker/: card.cpp  card.h  cfr_solver.cpp  cfr_solver.h  evaluator.cpp  evaluator.h  game_tree.cpp  game_tree.h
docs/: API.md
frontend/: 404.html  422.html  50x.html  api-gateway.js  debug.html  index-backup.html  index-simple.html  index.html  realtime-monitor.js  realtime-monitor.js.bak  strategy-visualizer.js  styles.css  task-debug.html  test.html
k8s/: application.yaml  infrastructure.yaml  kubeconfig Alpha Beta Solver.yaml  security-and-networking.yaml
monitoring/: prometheus.yml
performance_tests/: cfr_performance_analyzer.py  gto_validator.py  load_tester.py  run_all_tests.py  setup.py
scripts/: backup.sh  build.sh  (+5 more)
(+2 files in other folders)
